--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "laempresa",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && rsync -av --delete -e 'ssh -i $HOME/.ssh/dbwebb' build/ efostud@ssh.student.bth.se:www/laempresa"
   },
   "eslintConfig": {
     "extends": [
