--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "laempresa",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,9 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build && rsync -av --delete -e 'ssh -i $HOME/.ssh/dbwebb' build/ efostud@ssh.student.bth.se:www/laempresa",
-    "test": "jest"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -35,11 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/preset-react": "^7.18.6",
-    "@testing-library/react": "^13.4.0",
-    "jest": "^27.5.1",
-    "react-test-renderer": "^18.2.0"
   }
 }
